@@ -1,6 +1,7 @@
 <h3>0.13.8</h3>
 <ul>
     <li>Initialize Notification on Load</li>
+    <li>add About Entry for 2020.1+</li>
 </ul>
 <h3>0.13.7</h3>
 <ul>
