@@ -1,0 +1,6 @@
+package org.codinjutsu.tools.jenkins;
+
+public class Version {
+    public static final String PLUGIN_ID = "Jenkins Control Plugin";
+    public static final String PLUGIN_NAME = "Jenkins Plugin";
+}
