@@ -1,5 +1,6 @@
 Version 0.13.8
     * Initialize Notification on Load
+    * add About Entry for 2020.1+
 
 Version 0.13.8
     * #232 PersistentStringParameter not supported
